--- a/Budget/package.json
+++ b/Budget/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Budget",
   "version": "1.0.0",
-  "description": "Web app for bank statement reports",
+  "description": "Tracks spending habits",
   "scripts": {
     "build": "run-script-os",
     "build:win32": "SET NODE_ENV=production && webpack --progress --color --optimization-minimize && npm run flask-static-digest",
@@ -31,14 +31,14 @@
   "homepage": "https://github.com/daedalus23/Budget#readme",
   "dependencies": {
     "@fortawesome/fontawesome-free": "6.4.2",
+    "@popperjs/core": "2.11.8",
     "bootstrap": "5.3.1",
-    "jquery": "3.7.0",
-    "@popperjs/core": "2.11.8"
+    "jquery": "3.7.0"
   },
   "devDependencies": {
     "@babel/core": "7.22.10",
-    "@babel/preset-env": "7.22.10",
     "@babel/eslint-parser": "7.22.10",
+    "@babel/preset-env": "7.22.10",
     "babel-loader": "9.1.3",
     "chokidar": "3.5.3",
     "concurrently": "8.2.0",
